[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["rgpio"]

[project]
authors = [{ name = "Rene Ebertowski", email = "r.ebertowski@gmx.de" }]
description = "A Python GPIO wrapper library that enables unified usage of different GPIO libraries"
name = "ReausoGPIO"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[project.urls]
Documentation = "https://reauso.github.io/ReausoGPIO/"
Repository = "https://github.com/reauso/ReausoGPIO"
Issues = "https://github.com/reauso/ReausoGPIO/issues"

[project.optional-dependencies]
test = [
    "pytest>=9.0.0,<10.0",
    "coverage>=7.0.0,<8.0",
    "parameterized>=0.9.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "attrs>=24.0.0,<25.0",
]
docs = [
    "mkdocs-material>=9.0.0,<10.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
ReausoGPIO = { path = ".", editable = true }

[tool.pixi.tasks]


[tool.pixi.environments]
test = ["test"]
docs = ["docs"]

[tool.pixi.feature.test.pypi-dependencies]
ReausoGPIO = { path = ".", editable = true, extras = ["test"] }

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest"
coverage = { cmd = [
    "coverage", "report",
    "&&", "coverage", "html"
], depends-on = ["test"] }

[tool.pixi.feature.docs.pypi-dependencies]
ReausoGPIO = { path = ".", editable = true, extras = ["docs"] }

[tool.pixi.feature.docs.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"

[tool.coverage.run]
source = ["rgpio"]
omit = [
  "*/*_test.py",
  "*/lib/python*/unittest/*",
  "*/Lib/unittest/*"
]

[tool.coverage.report]
show_missing = true
#skip_covered = true
